# frp-nest-panel

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.en.md  README.md  docker-compose.yml
frontend/: index.html  package-lock.json  tsconfig.app.json  vite.config.ts
frontend/src/: styles.css
frontend/src/api/: admin.ts  auth.ts  certificates.ts  client.ts  dashboard.ts  tunnels.ts  types.ts
frontend/src/components/: AdminNav.vue  AlertBox.vue  AppShell.vue  (+13 more)
frps/: frps.example.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20260605_000001_create_users.rs  m20260605_000002_create_invite_codes.rs  m20260605_000003_create_tunnels.rs  m20260608_000004_add_user_max_tunnels.rs  m20260608_000005_add_domain_tunnels_and_certificates.rs  m20260609_000006_create_traffic_samples.rs  m20260609_000007_add_tunnel_advanced_options.rs  m20260609_000008_add_audit_logs_and_tunnel_config_state.rs
src/: auth.rs  config.rs  error.rs  main.rs  spa.rs  state.rs  web.rs
src/entities/: audit_logs.rs  certificates.rs  invite_codes.rs  mod.rs  traffic_samples.rs  tunnels.rs  users.rs
src/routes/: admin.rs  auth.rs  certificates.rs  dashboard.rs  mod.rs  tunnels.rs  types.rs
src/services/: audit.rs  caddy.rs  certificates.rs  frpc.rs  frps.rs  invite.rs  mod.rs  panel_tls.rs  password.rs  ports.rs  traffic.rs  validation.rs
src/static/: app.css  app.js  pico.min.css
src/templates/: admin.html  admin_invites.html  admin_tunnels.html  admin_users.html  base.html  dashboard.html  frpc_preview.html  login.html  password.html  register.html  tunnel_new.html
(+16 files in other folders)
