[package]
name = "frp-nest-panel"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["migration"]

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "form"] }
chrono = { version = "0.4", features = ["serde"] }
migration = { path = "migration" }
once_cell = "1.21"
rand = "0.8"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower-sessions = { version = "0.14", features = ["signed"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
